--- a/store.html
+++ b/store.html
@@ -617,10 +617,10 @@ z-index: 10;
     <h2>Календарь</h2>
     <p6>Ваш каждый день на устрашающем календаре со страхами на выбор. </p6>
     <h3>Путеводитель по «‎Улице страхов»</h3>
-    <p7>Путеводитель с подробными направляющими, картой местности и историей. </p7>
+    <p7>Путеводитель с подробными направляющими, картой местности <br>и историей. </p7>
     <h4>Кассета
 с воспоминаниями </h4>
-    <p8>Сделайте заказ заранее или на месте и мы запишем все ваше приключение. </p8>
+    <p8>Сделайте заказ заранее или на месте <br>и мы запишем все ваше приключение. </p8>
     <h5>Плакаты</h5>
     <p9>Повсесьте плакат на видное место, пусть Улица страхов всегда напоминает о себе. </p9>
     <div id="menu"></div>
