--- a/calendar.html
+++ b/calendar.html
@@ -119,7 +119,7 @@
         font-size: 15px;
         text-align: center;
         border-spacing:0px;
-        top: -60px; left: 80px;
+        top: -300px; left: 80px;
       }
       #calendar tr.dn td {
         position: relative;
@@ -182,9 +182,27 @@
         position: relative;
         display:block;
         width: 340px;
-        margin: 15px;
-        left: 720px;
-        padding-top: 830px;
+        margin: 35px;
+        left: 750px;
+
+        height: 37px;
+        padding: 0 18px;
+        font-size: 15px;
+        text-align: center;
+        color: white;
+        font-family: FuturaLightC;
+        border-radius: 4px;
+        background-color: #CC0031;
+        border: none;
+        border-bottom: 1px solid white;
+      }
+      input[type="email"] {
+        position: relative;
+        display:block;
+        width: 340px;
+        margin: 35px;
+        left: 750px;
+
         height: 37px;
         padding: 0 18px;
         font-size: 15px;
@@ -201,7 +219,7 @@
   font-family: FuturaLightC;
 }
 
-      button {
+       /* button {
         position: relative;
         font-size: 17px;
         line-height: 1.47059;
@@ -221,8 +239,32 @@
         padding: 5px 20px;
         text-align: center;
         white-space: nowrap;
-        /* margin: 125px auto; */
+        margin: 5px 50px;
+      } */
+
+      /* button{
+        position: relative;
+        top: 500px;
+        left: 700px;
+        border: 1px white;
+        font-family: FuturaLightC;
+        background-color: #CC0031;
+        color: white;
+        cursor: pointer;
+        white-space: nowrap;
+
+
+      } */
+
+      form{
+        position: relative;
+        padding-top: 140px;
+
       }
+
+
+
+
       /* #calendar tbody td.today {
         background: #CC0031;
         color: #CC0031;
@@ -233,18 +275,47 @@
         line-height: 53px;
       } */
 
+        .btn {
+        position: relative;
+        color: white;
+        padding: 12px 34px;
+        width: 190px;
+        height: 120;
+        line-height: 35px;
+        /* top: 50px; */
+        text-decoration: none;
+        left: 920px;
+        cursor: pointer;
+        border: 1px solid white;
+        border-radius: 1px;
+        background-color: #CC0031;
+        font-family: FuturaLightC;
+        font-size: 18px;
+      }
+
+      /* The popup form - hidden by default */
+
+
+
     </style>
     </style>
   </head>
   <body bgcolor="CC0031">
-    <form class="" action="calendar.html" method="post">
+    <form class="forma" action="calendar.html" method="post">
     <input type="text" name="" value="" placeholder="Имя">
     <input type="text" name="" value="" placeholder="Фамилия">
-    <input type="text" name="" value="" placeholder="Электронный адрес">
+    <input type="email" name="" value="" placeholder="Электронный адрес">
+
+    </div>
+</form>
 
 
-      <button type="submit" name="button">Купить</button>
-    </form>
+
+      <!-- <button type="submit" class="button" name="button">Купить</button> -->
+
+    <!-- <button type="button" href="./store.html" class="btn"name="button">Купить</button> -->
+    <a type="button" href="./ticket.html" class="btn"name="button">Купить</a>
+
      <p1><a href="./main.html" class="mainlink">Главная</a></p1>
     <a href="./about.html" class="aboutlink">О нас</a>
     <a href="./calendar.html" class="calendarlink">Билеты</a>
@@ -266,6 +337,9 @@
 
 
     <script>
+
+
+
   function calendar(id, year, month) {
     var Dlast = new Date(year, month + 1, 0).getDate(),
       D = new Date(year, month, Dlast),
