--- a/places.html
+++ b/places.html
@@ -622,9 +622,9 @@ height: 1px;
 
     <a href="./labirint.html" class="labirintlink">II</a>
     <a href="./scene.html" class="scenelink">III</a>
-    <a href="./zal.html" class="zallink">IV</a>
+    <a href="./index.html" class="zallink">IV</a>
     <a href="./window.html" class="windowlink">I</a>
-    <a href="./index.html" class="indexlink">V</a>
+    <a href="./zal.html" class="indexlink">V</a>
 
 
     <img class="logo2" src="images/logo2.png" alt="logo2">
