--- a/store.html
+++ b/store.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title></title>
     <style media="screen">
-    .parfume{
+    /* .parfume{
       position: absolute;
       width: 420px;
       height: 420px;
-      left: 80px;
+      left: -180px;
       top: 300px;
-    }
+    } */
 
     .calendar2{
       position: absolute;
@@ -432,10 +432,7 @@
       z-index: 10;
           }
 
-        #button:hover{
-          border: 2px solid #FF003D;
-          background: rgba(255, 204, 216, 0.51);
-        }
+
 
             p15{
         position: absolute;
@@ -454,7 +451,7 @@
         z-index: 10;
         }
 
-        #button1{
+         #button1{
     position: absolute;
     width: 140px;
     height: 39px;
@@ -466,10 +463,7 @@
     z-index: 10;
         }
 
-      #button1:hover{
-        border: 2px solid #FF003D;
-        background: rgba(255, 204, 216, 0.51);
-      }
+
 
           p16{
       position: absolute;
@@ -500,10 +494,7 @@
   z-index: 10;
       }
 
-    #button2:hover{
-      border: 2px solid #FF003D;
-      background: rgba(255, 204, 216, 0.51);
-    }
+
 
         p17{
     position: absolute;
@@ -522,7 +513,7 @@
     z-index: 10;
     }
 
-    #button3{
+     #button3{
 position: absolute;
 width: 140px;
 height: 39px;
@@ -534,10 +525,7 @@ box-sizing: border-box;
 z-index: 10;
     }
 
-  #button3:hover{
-    border: 2px solid #FF003D;
-    background: rgba(255, 204, 216, 0.51);
-  }
+
 
       p18{
   position: absolute;
@@ -568,10 +556,7 @@ box-sizing: border-box;
 z-index: 10;
   }
 
-#button4:hover{
-  border: 2px solid #FF003D;
-  background: rgba(255, 204, 216, 0.51);
-}
+
 
     p19{
 position: absolute;
@@ -593,20 +578,28 @@ z-index: 10;
 
 
 
-
     </style>
   </head>
 
 
 
   <body bgcolor="#000000">
+
+
+
+
+
+    </div>
+
+
+
     <img class="logo" src="images/logo.png" alt="logo">
     <a href="./main.html" class="mainlink">Главная</a>
     <a href="./about.html" class="aboutlink">О нас</a>
     <a href="./calendar.html" class="calendarlink">Билеты</a>
     <a href="./places.html" class="placeslink">Места</a>
     <a href="./store.html" class="storelink">Магазин</a>
-    <img class="pafrume" src="images/parfume.png" alt="parfume">
+     <img class="pafrume" src="images/parfume.png" alt="parfume">
     <img class="calendar2" src="images/calendar2.png" alt="calendar2">
     <img class="cassette" src="images/cassette.png" alt="cassette">
     <img class="book" src="images/book.png" alt="book">
