--- a/main.html
+++ b/main.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel='stylesheet' media='screen and (min-width: 320px) and (max-width: 375px)' href='main.css' /> -->
+     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+     <meta name="viewport" content="width=device-width">
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
     <meta charset="utf-8">
     <title>Улица страха</title>
   </head>
   <style>
+  @media only screen and (max-width: 320px) {
+
+    h1{
+    position: absolute;
+    left: 35px !important;
+    top: 30px !important;
+    font-size: 70px !important;
+    line-height: 70px !important;}
+  .compas{
+    width: 250px !important;
+    height: 250px !important;
+    left: 90px !important;
+    top: 450px !important;
+    }
+    .logo{
+      position: fixed;
+      left: 80px;
+      top: 30px;
+      height: 20px !important;
+      width: 54px !important;
+    }
+    .mainlink{
+      font-size: 20px !important;
+    }
+  }
   h1{
     position: absolute;
     /* width: 1305px;
@@ -39,10 +69,14 @@
     z-index: 1;
   }
 
+
   .compas:hover {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
           }
+
+
+
 
   .logo{
     position: fixed;
@@ -50,8 +84,6 @@
     top: 30px;
     height: 43px;
     width: 117px;
-
-
   }
 
      .mainlink{
@@ -116,7 +148,7 @@
        /* margin: 30%; */
        font-size: 32px;
        text-decoration: none;
-       left: 880px; 
+       left: 880px;
        top: 38px;
 
 
@@ -155,15 +187,18 @@
 </script>
 
     <body bgcolor="#000000">
+
     <h1>Улица страха</h1>
     <img class="compas" src="images/compas.png" alt="compas">
     <img class="logo" src="images/logo.png" alt="logo">
     <!-- <header class="header"> -->
-        <p1><a href="./main.html" class="mainlink">Главная</a></p1>
+        <a href="./main.html" class="mainlink">Главная</a>
         <a href="./about.html" class="aboutlink">О нас</a>
         <a href="./calendar.html" class="calendarlink">Билеты</a>
         <a href="./places.html" class="placeslink">Места</a>
         <a href="./store.html" class="storelink">Магазин</a>
+
+
 
     <!-- <p1>О нас</p1>
     <p2>Места</p2>
