--- a/store.html
+++ b/store.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="ie.css">
     <style media="screen">
+
     /* .parfume{
       position: absolute;
       width: 420px;
@@ -11,7 +14,40 @@
       left: -180px;
       top: 300px;
     } */
+    @media screen and (max-width: 320px) {
 
+
+      .calendar2{
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        left: 80px;
+        top: 500px;
+      }
+      h1{
+        position: absolute;
+        width: 400px;
+        height: 117px;
+        left: 660px;
+        top: 100px;
+
+        font-family: Lovelace;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 9px;
+        line-height: 44px;
+        /* or 120% */
+
+
+        color: #FF003D;      }
+
+      p5{
+        position: absolute;
+        left: 4px;
+        font-size: 9px;
+
+      }
+}
     .calendar2{
       position: absolute;
       width: 420px;
