--- a/about.html
+++ b/about.html
@@ -8,134 +8,7 @@
     <title>Улица страха</title>
   </head>
   <style>
-@media only screen and (max-width: 320px) {
 
-  .mainlink, .aboutlink, .storelink, .calendarlink, .placeslink{ display: none;
-  }
-  .logo{
-    position: fixed;
-    left: 1000px !important;
-    top: 60px !important;
-    height: 81px !important;
-    width: 220px !important;
-  }
-  #menu__toggle {
-    opacity: 0;
-  }
-
-  .menu__btn {
-    display: flex;
-    align-items: center;
-    position: fixed;
-    top: 80px;
-    left: 80px;
-    width: 120px;
-    height: 100px;
-    cursor: pointer;
-    z-index: 100;
-
-  }
-
-  .menu__btn > span,
-  .menu__btn > span::before,
-  .menu__btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 10px;
-    background-color: #FF003D;
-
-  }
-  .menu__btn > span::before {
-    content: '';
-    top: -40px;
-
-  }
-  .menu__btn > span::after {
-    content: '';
-    top: 40px;
-
-  }
-
-  .menu__box {
-    display: block;
-    position: fixed;
-    visibility: hidden;
-    top: 0;
-    left: -100%;
-    width: 1220px ;
-    height: 100% ;
-    margin: 0;
-    padding: 80px 0 ;
-    list-style: none ;
-    text-align: center ;
-    background-color: black;
-    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-    z-index: 10;
-  }
-  /* элементы меню */
-  .menu__item {
-    display: block;
-    padding: 42px 94px;
-    color: #FF003D;
-    font-family: Lovelace;
-    font-size: 80px;
-    font-weight: 600;
-    text-decoration: none;
-    background-color: black;
-    top: 30px;
-  }
-
-  #menu__toggle:checked ~ .menu__btn > span {
-    transform: rotate(45deg);
-  }
-  #menu__toggle:checked ~ .menu__btn > span::before {
-    top: 0;
-    transform: rotate(0);
-  }
-  #menu__toggle:checked ~ .menu__btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-  }
-  #menu__toggle:checked ~ .menu__box {
-    visibility: visible;
-    left: 0;
-  }
-  p1{
-    position: absolute;
-     width: 990px !important;
-     height: 170px;
-     left: 80px;
-     top: 650px !important;
-
-     font-family: FuturaLightC;
-     font-style: normal;
-     font-weight: normal;
-     font-size: 50px !important;
-     line-height: 54px !important;
-
-     color: #FFFFFF;
-  }
-
-  h1{
-    position: absolute;
-    height: 192px;
-left: 80px;
-top: 260px !important;
-
-font-family: Lovelace;
-font-style: normal;
-font-weight: normal;
-font-size: 110px !important;
-line-height: 113px !important;
-
-color: #FF003D;
-
-  }
-}
-@media only screen and (min-width: 321px){
- .menu__item, .menu__box, .menu__btn, .checkbox .menu__toggle, .hamburger-menu{ visibility: hidden;}
-}
 
 
   .logo{
@@ -272,6 +145,247 @@ color: #FF003D;
      }
 
 
+     @media only screen and (max-width: 320px) {
+
+       .mainlink, .aboutlink, .storelink, .calendarlink, .placeslink{ display: none;
+       }
+       .logo{
+         position: fixed;
+         left: 1000px !important;
+         top: 60px !important;
+         height: 81px !important;
+         width: 220px !important;
+       }
+       #menu__toggle {
+         opacity: 0;
+       }
+
+       .menu__btn {
+         display: flex;
+         align-items: center;
+         position: fixed;
+         top: 80px;
+         left: 80px;
+         width: 120px;
+         height: 100px;
+         cursor: pointer;
+         z-index: 100;
+
+       }
+
+       .menu__btn > span,
+       .menu__btn > span::before,
+       .menu__btn > span::after {
+         display: block;
+         position: absolute;
+         width: 100%;
+         height: 10px;
+         background-color: #FF003D;
+
+       }
+       .menu__btn > span::before {
+         content: '';
+         top: -40px;
+
+       }
+       .menu__btn > span::after {
+         content: '';
+         top: 40px;
+
+       }
+
+       .menu__box {
+         display: block;
+         position: fixed;
+         visibility: hidden;
+         top: 0;
+         left: -100%;
+         width: 1220px ;
+         height: 100% ;
+         margin: 0;
+         padding: 90px 0 ;
+         list-style: none ;
+         text-align: center ;
+         background-color: black;
+         box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+         z-index: 10;
+       }
+       /* элементы меню */
+       .menu__item {
+         display: block;
+         padding: 42px 124px;
+         color: #FF003D;
+         font-family: Lovelace;
+         font-size: 80px;
+         font-weight: 600;
+         text-decoration: none;
+         background-color: black;
+         top: 30px;
+       }
+
+       #menu__toggle:checked ~ .menu__btn > span {
+         transform: rotate(45deg);
+       }
+       #menu__toggle:checked ~ .menu__btn > span::before {
+         top: 0;
+         transform: rotate(0);
+       }
+       #menu__toggle:checked ~ .menu__btn > span::after {
+         top: 0;
+         transform: rotate(90deg);
+       }
+       #menu__toggle:checked ~ .menu__box {
+         visibility: visible;
+         left: 0;
+       }
+       p1{
+         position: absolute;
+          width: 990px !important;
+          height: 170px;
+          left: 80px;
+          top: 650px !important;
+
+          font-family: FuturaLightC;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 50px !important;
+          line-height: 54px !important;
+
+          color: #FFFFFF;
+       }
+
+       h1{
+         position: absolute;
+         height: 192px;
+     left: 80px;
+     top: 260px !important;
+
+     font-family: Lovelace;
+     font-style: normal;
+     font-weight: normal;
+     font-size: 110px !important;
+     line-height: 113px !important;
+
+     color: #FF003D;
+
+       }
+     }
+     @media only screen and (min-width: 769px){
+      .menu__item, .menu__box, .menu__btn, .checkbox .menu__toggle, .hamburger-menu{ visibility: hidden;}
+    }
+
+    @media only screen and (min-width: 321px) and (max-width: 768px){
+
+
+      h1{
+        line-height: 120px;
+        left: 70px;
+        top: 180px;
+        font-size: 105px;
+
+      }
+
+      p1{
+        top: 550px;
+        font-size: 40px;
+        line-height: 40px;
+        width: 900px;
+
+      }
+      .mainlink, .aboutlink, .storelink, .calendarlink, .placeslink{ display: none;
+      }
+      .logo{
+        position: fixed;
+        left: 1030px  ;
+        top: 50px  ;
+        height: 80px  ;
+        width: 220px  ;
+      }
+      .mainlink, .aboutlink, .storelink, .calendarlink .placeslink {display: none;
+      }
+      #menu__toggle {
+        opacity: 0;
+      }
+
+      .menu__btn {
+        display: flex;
+        align-items: center;
+        position: fixed;
+        top: 40px;
+        left: 40px;
+        width: 60px;
+        height: 66px;
+        cursor: pointer;
+        z-index: 100;
+
+      }
+
+      .menu__btn > span,
+      .menu__btn > span::before,
+      .menu__btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background-color: #FF003D;
+
+      }
+      .menu__btn > span::before {
+        content: '';
+        top: -20px;
+
+      }
+      .menu__btn > span::after {
+        content: '';
+        top: 20px;
+
+      }
+
+      .menu__box {
+        display: block;
+        position: fixed;
+        visibility: hidden;
+        top: 0;
+        left: 1px;
+        width: 1768px  ;
+        height: 100%  ;
+        margin: 0  ;
+        padding: 150px 0  ;
+        list-style: none  ;
+        text-align: center  ;
+        background-color: black  ;
+        box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+        z-index: 10;
+      }
+      /* элементы меню */
+      .menu__item {
+        display: block  ;
+        padding: 28px 24px  ;
+        color: #FF003D  ;
+        font-family: Lovelace  ;
+        font-size: 70px  ;
+        font-weight: 600  ;
+        text-decoration: none  ;
+        background-color: black  ;
+
+      }
+
+      #menu__toggle:checked ~ .menu__btn > span {
+        transform: rotate(45deg);
+      }
+      #menu__toggle:checked ~ .menu__btn > span::before {
+        top: 0;
+        transform: rotate(0);
+      }
+      #menu__toggle:checked ~ .menu__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+      #menu__toggle:checked ~ .menu__box {
+        visibility: visible;
+        left: 0;
+    }
+ }
 
 
 
@@ -284,7 +398,7 @@ color: #FF003D;
 Тут вас ждут пугающие препятствия. Вы можете заглянуть в окна страха, пройтись <br>по запутанному лабиринту, стать свидетелем ужасного представления, пообедать страшынми на вид блюдами или даже упасть в яму! </p1>
     <img class="logo" src="images/logo.png" alt="logo">
     <!-- <header class="header"> -->
-        <p1><a href="./main.html" class="mainlink">Главная</a></p1>
+        <a href="./main.html" class="mainlink">Главная</a>
         <a href="./about.html" class="aboutlink">О нас</a>
         <a href="./calendar.html" class="calendarlink">Билеты</a>
         <a href="./places.html" class="placeslink">Места</a>
