--- a/zal.html
+++ b/zal.html
@@ -630,7 +630,7 @@
   <img class="zal" src="images/zal.png" alt="zal">
   <img class="zal2" src="images/zal2.png" alt="zal2">
   <img class="zal3" src="images/zal3.png" alt="zal3">
-  <p1><a href="./main.html" class="mainlink">Главная</a></p1>
+  <p1><a href="./index.html" class="mainlink">Главная</a></p1>
   <a href="./about.html" class="aboutlink">О нас</a>
   <a href="./calendar.html" class="calendarlink">Билеты</a>
   <a href="./places.html" class="placeslink">Места</a>
