--- a/about.html
+++ b/about.html
@@ -8,6 +8,15 @@
     <title>Улица страха</title>
   </head>
   <style>
+  @font-face {
+    font-family: Lovelace;
+    src: url(fonts/Lovelace.ttf);
+   }
+
+   @font-face {
+     font-family: FuturaLightC;
+     src: url(fonts/FuturaLightC.ttf); 
+    }
 
 
 
