--- a/calendar.html
+++ b/calendar.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width">
 
     <style>
+    @font-face {
+      font-family: Lovelace;
+      src: url(fonts/Lovelace.ttf);
+     }
+
+     @font-face {
+       font-family: FuturaLightC;
+       src: url(fonts/FuturaLightC.ttf);
+      }
 
     .mainlink{
       position: fixed;
