--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <title>Улица страха</title>
   </head>
   <style>
+  @font-face {
+    font-family: Lovelace;
+    src: url(fonts/Lovelace.ttf);
+   }
+
+   @font-face {
+     font-family: FuturaLightC;
+     src: url(fonts/FuturaLightC.ttf);
+    }
 
 
 /* @media only screen and (max-width: 768px){
