--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Ад</title>
   <link rel="stylesheet" href="style.css">
+  <style>
   @font-face {
       font-family: Mason Chronicles;
       src: url(fonts/masonchronicles.ttf);
