--- a/places.html
+++ b/places.html
@@ -7,7 +7,15 @@
     <style media="screen">
 
 
+    @font-face {
+      font-family: Lovelace;
+      src: url(fonts/Lovelace.ttf);
+     }
 
+     @font-face {
+       font-family: FuturaLightC;
+       src: url(fonts/FuturaLightC.ttf);
+      }
     .mainlink{
       position: fixed;
       color: white;
