--- a/store.html
+++ b/store.html
@@ -7,7 +7,15 @@
   <link rel="stylesheet" href="ie.css">
     <style media="screen">
 
+    @font-face {
+      font-family: Lovelace;
+      src: url(fonts/Lovelace.ttf);
+     }
 
+     @font-face {
+       font-family: FuturaLightC;
+       src: url(fonts/FuturaLightC.ttf);
+      }
 
     .calendar2{
       position: absolute;
