--- a/ticket.html
+++ b/ticket.html
@@ -6,7 +6,15 @@
     <title></title>
     <style media="screen">
 
+    @font-face {
+      font-family: Lovelace;
+      src: url(fonts/Lovelace.ttf);
+     }
 
+     @font-face {
+       font-family: FuturaLightC;
+       src: url(fonts/FuturaLightC.ttf);
+      }
 
       .ticket{
         position: relative;
